# CatalogScanner

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  pacman-deps.txt  pyproject.toml
assets/recipes/: colors.json  names.json  translations.json
catalogscanner/: catalog.py  common.py  constants.py.example  critters.py  discord_bot.py  music.py  reactions.py  recipes.py  scanner.py  scanner_test.py  storage.py
catalogscanner/telegram/: _scannerbot.py  bot.py  common.py
catalogscanner/variations/: requirements.txt  variations.py
tests/: test_scanner.py
tests/assets/expected/: examples.json
