[tool.poetry]
name = "catalogscanner"
version = "0.1.0"
description = "Scans Animal Crossing: New Horizon catalog from video of user scrolling through."
authors = ["Nachtalb <na@nachtalb.io>", "EhsanKia <contact@ehsankia.com>"]
license = "LGPL-3.0"
readme = "README.md"

[tool.poetry.scripts]
catalogscanner = "catalogscanner.scanner:main"
catalogscanner-bot = "catalogscanner.telegram.bot:main"


[tool.poetry.dependencies]
python = "^3.12"
imagehash = "^4.3.1"
absl-py = "^2.1.0"
pytesseract = "^0.3.10"
protobuf = "^5.27.2"
opencv-python = "^4.10.0.84"
opencv-contrib-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff-lsp = "^0.0.54"
isort = "^5.13.2"
mypy = "^1.10.1"
ipdb = "^0.13.13"
pre-commit = "^3.7.1"


[tool.poetry.group.types.dependencies]
types-pillow = "^10.2.0.20240520"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-xdist = "^3.6.1"


[tool.poetry.group.bot.dependencies]
python-telegram-bot = { extras = ["all"], version = "^21.3" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
preview = true
unstable = false
target-version = ["py312"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
show_error_codes = true
pretty = true
strict = true
exclude = ["catalogscanner/variations/*"]

[[tool.mypy.overrides]]
module = ["pytesseract"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -n auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
